submit java-collections-ru/tests